# MyDB

./: .gitignore  CMakeLists.txt  Condition.cpp  SQLQuery.cpp  main.cpp  parseCreateTableQuery.cpp
parser/: parseCreateTableQuery.cpp  parseDeleteQuery.cpp  parseDropTableQuery.cpp  parseInsertValueQuery.cpp  parseSelectQuery.cpp  parseUpdateQuery.cpp
parser/include/: parseCreateTableQuery.h  parseDeleteQuery.h  parseDropTableQuery.h  parseInsertValueQuery.h  parseSelectQuery.h  parseUpdateQuery.h
sql/: Condition.cpp  SQLQuery.cpp  createTableCSV.cpp  insertTableCSV.cpp  selectTableCSV.cpp  updateTableCSV.cpp
sql/include/: Condition.h  SQLQuery.h  createTableCSV.h  insertTableCSV.h  selectTableCSV.h  updateTableCSV.h
tests/: test_queries.cpp
